# aifd_cv_comparison

./: pyproject.toml
